# not-just-a-todo-app

./: .dockerignore  .editorconfig  .env.example  .flaskenv  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TODO.md  app.py  codecov.yml  compose.yml  gunicorn.conf.py  mise.toml  package-lock.json  package.json  prek.toml  pyproject.toml  renovate.json  requirements.txt
.github/: actionlint.yaml  codecov.yml
.github/workflows/: check-migrations.yml  check-pr-title.yml  check-prek.yml  check-security.yml  check-tests.yml  rebuild-image.yml
docker/: entrypoint.sh
docs/: operations.md
migrations/versions/: d6b27a916acd_.py
scripts/: copy-vendor.sh  install-vendor.sh
src/: _types.py  admin.py  app.py  commands.py  config.py  db.py  forms.py
src/app/: __main__.py  admin.py  app.py  commands.py  config.py  extensions.py  factory.py  forms.py  middleware.py  wsgi.py
src/app/db/fixtures/: sequences.json  users.json
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: a1b2c3d4e5f6_add_lockout_columns.py  b2c3d4e5f6a7_add_server_default_to_timestamps.py  d6b27a916acd_.py
src/app/db/models/: __init__.py  base.py  mixins.py  sequences.py  templates.py  users.py
src/app/observability/: __init__.py  metrics.py  sql.py
src/app/services/: __init__.py  auth.py  password_breach.py  sequences.py  tokens.py
src/app/templates/admin/: form-page.html  master.html  sequence-progress.html
src/app/views/: __init__.py  about.py  index.py  mixins.py  profile.py  sequences.py
src/templates/admin/: about.html  form-page.html  index.html  master.html  password-form-page.html  sequence-progress.html
src/views/: __init__.py  about.py  index.py  mixins.py  profile.py  sequences.py
tests/: conftest.py  extensions.py  test_auth_service.py  test_factory.py  test_html_snapshots.py  test_main.py  test_middleware.py  test_models.py  test_password_breach.py  test_properties.py  test_routes_snapshot.py  test_services.py  test_token_service.py  test_views.py  test_visual_snapshots.py
tests/__snapshots__/: test_routes_snapshot.ambr
tests/__snapshots__/test_html_snapshots/: test_page_html_snapshot[about-about][about].raw  test_page_html_snapshot[index-][index].raw  test_page_html_snapshot[login-login][login].raw  test_page_html_snapshot[register-register][register].raw
tests/assets/: sequences.json  users.json
toolbox/: __main__.py  main.py
tools/: copy-vendor-assets.sh
