[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/app"]


[project]
name = "app"
version = "0.1.0"
description = "This is not just a TODO App!"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
  "bcrypt==5.0.0",
  "SQLAlchemy-Utils[password]==0.42.1",
  "SQLAlchemy-Mixins==2.0.5",
  "Flask==3.1.3",
  "Flask-Admin==2.1.0",
  "Flask-WTF[email]==1.3.0",
  "Flask-Login==0.6.3",
  "Flask-Security-Too==5.8.0",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-Migrate==4.1.0",
  "Bootstrap-Flask==2.5.0",
  "pydantic-settings>=2.13.1",
]


[dependency-groups]
dev = [
  "tox==4.53.0",
  "tox-uv==1.35.1",
  { include-group = "lint" },
  { include-group = "test" },
]
lint = [
  "pylint==4.0.5",
  "mypy==1.20.2",
  "pyright==1.1.409",
  "ty==0.0.34",
  "slotscheck==0.19.1",
]
test = [
  "coverage-enable-subprocess==1.0",
  "coverage[toml]~=7.4",
  "pytest-asyncio>=1.3.0",
  "pytest-dependency>=0.6.1",
  "pytest-mock~=3.12",
  "pytest-playwright>=0.5.2",
  "pytest-rerunfailures~=16.1",
  "pytest-xdist[psutil]~=3.5",
  "syrupy>=4.7.0",
  "pytest~=9.0.2",
  "uvicorn>0.27.0",
  "httpx>=0.28.1",
]


[tool.ruff]
extend-exclude = ["alembic", "migrations"]
fix = true
output-format = "full"
preview = true
show-fixes = true
target-version = "py310"
unsafe-fixes = true


[tool.ruff.analyze]
detect-string-imports = true


[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true


[tool.ruff.lint]
# Run `ruff linter` command to see all available linters and their descriptions
fixable = ["ALL"]
ignore = [
  "A",
  "D",
  "DTZ",
  "ANN",
  "PLR",
  "ARG",
  "S",
  "RUF",
  "FBT",
  "SLF",
  "DOC",
  "PLC",
  "TD",
  "FIX",
  "PGH",
  "PLW",
  "COM812",
]
logger-objects = ["logging_setup.logger"]
preview = true
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ['S101']


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


[tool.ruff.lint.flake8-copyright]
author = "Hasan Sezer Taşan <hasansezertasan@gmail.com>"


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.ruff]
parenthesize-tuple-in-subscript = true


[tool.djlint]
profile = "jinja"
format_css = true
format_js = true
extension = ".html"
ignore = "H016,H023,H030,H031"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"


[tool.coverage.run]
source = ["src/app"]
branch = true


[tool.coverage.report]
show_missing = true
skip_covered = true
