[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "app"
version = "0.1.0"
description = "This is not just a TODO App!"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
  "bcrypt==5.0.0",
  "Bootstrap-Flask==2.5.0",
  "Flask-Admin==2.2.0",
  "Flask-Login==0.6.3",
  "Flask-Migrate==4.1.0",
  "Flask-Security-Too==5.8.0",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF[email]==1.3.0",
  "Flask==3.1.3",
  "gunicorn==26.0.0",
  "pydantic-settings==2.14.1",
  "sentry-sdk[flask]==2.59.0",
  "SQLAlchemy-Mixins==2.0.5",
  "SQLAlchemy-Utils[password]==0.42.1",
  "flask-compress==1.24",
  "flask-static-digest==0.4.1",
  "prometheus-flask-exporter==0.23.2",
  "flask-limiter==4.1.1",
  "argon2-cffi==23.1",
  "python-json-logger==4.1.0",
]


[project.optional-dependencies]
# OpenTelemetry is optional — only pulled when OTEL_ENDPOINT is set.
otel = [
  "opentelemetry-api==1.41.1",
  "opentelemetry-sdk==1.41.1",
  "opentelemetry-exporter-otlp==1.41.1",
  "opentelemetry-instrumentation-flask==0.48b0",
  "opentelemetry-instrumentation-sqlalchemy==0.48b0",
]


[project.urls]
Homepage = "https://github.com/hasansezertasan/not-just-a-todo-app"
Repository = "https://github.com/hasansezertasan/not-just-a-todo-app"
Issues = "https://github.com/hasansezertasan/not-just-a-todo-app/issues"


[project.scripts]
# Lets `pip install .` expose `app` as a CLI shim around `flask --app app.wsgi`.
app = "flask.cli:main"


[dependency-groups]
dev = [
  "commitizen>=3.30",
  "tox==4.53.1",
  "tox-uv==1.35.2",
  { include-group = "lint" },
  { include-group = "test" },
]
lint = [
  "pylint==4.0.5",
  "mypy==2.1.0",
  "pyright==1.1.409",
  "ty==0.0.35",
  "slotscheck==0.19.1",
]
test = [
  "coverage-enable-subprocess==1.0",
  "coverage[toml]==7.14.0",
  "flask-debugtoolbar==0.16",
  "hypothesis==6.152.6",
  "pip-audit==2.10.0",
  "pytest-asyncio==1.3.0",
  "pytest-check==2.8.0",
  "pytest-cov==7.1.0",
  "pytest-dependency==0.6.1",
  "pytest-mock==3.15.1",
  "pytest-playwright==0.7.2",
  "pytest-randomly==4.1.0",
  "pytest-rerunfailures==16.1",
  "pytest-xdist[psutil]==3.8.0",
  "pytest==9.0.3",
  "syrupy==5.1.0",
]


[tool.ruff]
extend-exclude = ["src/app/db/migrations"]
force-exclude = true
fix = true
output-format = "full"
preview = true
show-fixes = true
target-version = "py314"
unsafe-fixes = true


[tool.ruff.analyze]
detect-string-imports = true


[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true


[tool.ruff.lint]
# Run `ruff linter` command to see all available linters and their descriptions
fixable = ["ALL"]
ignore = [
  "A",
  "D",
  "DTZ",
  "ANN",
  "PLR",
  "ARG",
  "S",
  "RUF",
  "FBT",
  "SLF",
  "DOC",
  "PLC",
  "TD",
  "FIX",
  "PGH",
  "PLW",
  "COM812",
]
logger-objects = ["logging_setup.logger"]
preview = true
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ['S101']
# SQLAlchemy 2 Mapped[...] annotations need referenced types importable at
# module scope so get_type_hints can resolve them.
"src/app/db/models/*.py" = ["TC001", "TC002", "TC003"]


[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


[tool.ruff.lint.flake8-copyright]
author = "Hasan Sezer Taşan <hasansezertasan@gmail.com>"


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.ruff]
parenthesize-tuple-in-subscript = true


[tool.basedpyright]
include = ["src", "tests"]
exclude = ["src/app/db/migrations", "**/__pycache__", "**/.venv"]
extraPaths = ["."]
pythonVersion = "3.14"
typeCheckingMode = "standard"

# `pytest.raises(...)` blocks and assertion idioms.
reportUnusedCallResult = false

# SQLAlchemy 2 generates `__init__(**kwargs)` from `Mapped[...]` columns, but
# AllFeaturesMixin's `__init__` shadow makes basedpyright lose the kwargs
# surface. Same effect on Settings(...) with Literal/SecretStr fields.
reportCallIssue = false
reportArgumentType = false

# Flask-Admin's BaseModelView is generic over T_ORM_MODEL; subclassing with a
# concrete model triggers variance warnings that can't be silenced cleanly.
reportIncompatibleMethodOverride = false
reportAssignmentType = false

# `Model.query.first()` returns Optional. We accept that risk app-wide here
# rather than peppering `assert` guards across views.
reportOptionalMemberAccess = false

# Flask-Login's `login_manager.login_view` is annotated as `None` in the
# stubs but accepts a string at runtime; sqlalchemy-mixins' `.query` is
# untyped on subclassed Bases.
reportAttributeAccessIssue = false


[tool.vulture]
exclude = ["*/.venv/*.py", "*/src/app/db/migrations/*.py"]
min_confidence = 80
paths = ["src", "tests"]
sort_by_size = true


[tool.bandit]
# Skip the test directory: pytest uses bare `assert` (B101) and fixtures
# legitimately hardcode credentials (B105/B106). Migrations are auto-generated.
exclude_dirs = ["tests", "src/app/db/migrations"]
skips = ["B101"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true


[tool.djlint]
profile = "jinja"
format_css = true
format_js = true
extension = ".html"
ignore = "H016,H023,H030,H031"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"


[tool.coverage.run]
source_pkgs = ["app"]
branch = true
parallel = true


[tool.coverage.report]
show_missing = true
skip_covered = true
